--- a/app/globals.css
+++ b/app/globals.css
@@ -778,8 +778,8 @@ body {
 
 .about-container .glass {
   position: relative;
-  width: 300px;
-  height: 400px;
+  width: 350px;
+  height: 300px;
   background: linear-gradient(#fff2, transparent);
   border: 1px solid rgba(255, 255, 255, 0.1);
   box-shadow: 0 25px 25px rgba(0, 0, 0, 0.25);
@@ -839,19 +839,19 @@ body {
   text-align: center;
   font-size: 1.4rem;
   font-weight: bold;
-  color: #3b1760;
+  color: #592291;
   margin-bottom: 10px;
 }
 .glass_p {
   font-size: 1rem;
   font-weight: bold;
-  color: rgb(76, 30, 117);
+  color: rgb(110, 42, 170);
   margin: 5px 0;
 }
 .glass_l {
   font-size: 1rem;
   font-weight:bold ;
-  color: rgb(76, 30, 117);
+  color: rgb(115, 115, 115);
   margin: 5px 0;
 }
 
